--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,32 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Página de Inicio</title>
-    <!-- Agrega tus estilos CSS si es necesario -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/static/project.css}" />
 </head>
 <body>
 
-<div style="text-align: center; margin-top: 50px;">
-    <div>
-        <img src="https://cdn.hiperdino.es/amasty/blog/cache/I/c/550/370/Icono-App-HiperDino.jpg" alt="Imagen 1" style="width: 300px; height: 200px;">
-        <p>Última actualización: [[${hiperdinoDate}]]</p>
-        <button type="button">Actualizar BD</button>
-        <button type="button">Ver Estadísticas</button>
-    </div>
-
-    <div style="margin-top: 30px;">
-        <img src="https://my-tenerife.com/images/customers/0000140_mercadona_tenerife/004_arona/001_los_cristianos/0000140_01_mercadona_calle_ramona_martin_artista_los_cristianos_tenerife/001_logo/0000140-1-mercadona-logo-myt-my-tenerife.svg" alt="Mercadona" style="width: 300px; height: 200px;">
-        <p>Última actualización: [[${mercadonaDate}]]</p>
-        <button type="button">Actualizar BD</button>
-        <button type="button">Ver Estadísticas</button>
-    </div>
-
-    <div style="margin-top: 30px;">
-        <img src="https://my-tenerife.com/images/customers/0000146_tu_trebol_tenerife/001_adeje/0000146_01_tu_trebol_tenerife/001_logo/0000146-tu-trebol-logo-myt-my-tenerife.svg" alt="Tu Trebol" style="width: 300px; height: 200px;">
-        <p>Última actualización: [[${tutrebolDate}]]</p>
-        <button type="button">Actualizar BD</button>
-        <button type="button">Ver Estadísticas</button>
+<div class="main-container">
+    <h1>AhorroCesta</h1>
+    <div class="shopping-cart-container">
+        <h2 class="text-center">Supermercados</h2>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-4">
+                    <a th:href="@{/hiperdino/products}" class="cart-button">
+                        <img th:src="@{static/img/hiperdinoLogo.svg}" alt="Hiperdino" class="store-logo">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a th:href="@{/mercadona/products}" class="cart-button">
+                        <img th:src="@{static/img/mercadonaLogo.svg}" alt="Mercadona" class="store-logo">
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a th:href="@{/tutrebol/products}" class="cart-button">
+                        <img th:src="@{static/img/tutrebolLogo.svg}" alt="Tu Trebol" class="store-logo">
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+
+
 
 </body>
 </html>
